test/types/errors/test/index.ts
import add from '..';

add('x', 1);
add(1, 'x');
